--- a/_includes/social/share_buttons.liquid
+++ b/_includes/social/share_buttons.liquid
@@ -10,7 +10,7 @@
 
 <div class="share-buttons">
     <ul class="share-buttons">
-        <li class="meta">Share</li>
+        <li class="meta">Compartir</li> <!-- Embedded text -->
         {% if site.data.social.share.facebook or site.theme_settings.share_buttons.facebook %}
         <li>
             <a href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | absolute_url }}" target="_blank"
