added video, formatting, more translation

--- a/_includes/blog/blog.liquid
+++ b/_includes/blog/blog.liquid
@@ -1,6 +1,6 @@
 <div class="posts">
     {% unless paginator.posts %}
-    <article><section class="post-content"><p>There are no blog posts</p></section></article>
+    <article><section class="post-content"><p>No hay artículos</p></section></article> <!-- embedded text -->
     {% endunless %}
     {% for post in paginator.posts %}
     <div class="post-teaser">
