--- a/_includes/default/tags_list.liquid
+++ b/_includes/default/tags_list.liquid
@@ -4,9 +4,9 @@
   <div class="tag-list">
     <ul>
       {% if tags.size == 1 %}
-        <li class="meta">Tag</li>
+        <li class="meta">Etiqueta</li> <!-- Embedded text -->
       {% else %}
-        <li class="meta">Tags</li>
+        <li class="meta">Etiquetas</li>  <!-- Embedded text -->
       {% endif %}
 
       {% for tag in tags %}
