--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,7 +2,8 @@
   position: relative;
   width: 100%;
   height: 0;
-  padding-bottom: 50%;
+  padding-bottom: 56.25%;
+  margin-bottom: 22px;
 
   iframe {
   	position: absolute;
@@ -10,6 +11,24 @@
   	left: 0;
   	width: 100%;
   	height: 100%;
-  	border: 0;
+  	border: none;
+	border-radius: 8px;
+	padding: 0px;
   }
+}
+
+.video-local {
+	margin-bottom: 22px;
+	
+	video {
+		margin: 0px;
+		padding: 0px;
+		width: 100%;
+		border: none;
+		border-radius: 8px;
+	}
+}
+
+.image {
+	display: block;
 }
