changed drone images

--- a/_sass/includes/_gallery.scss
+++ b/_sass/includes/_gallery.scss
@@ -51,9 +51,9 @@
 }
 
 .grid-item:first-of-type {
-  margin-bottom: 1%;
+  margin-bottom: 12px;
 }
 
 .grid-item {
-  margin-bottom: 1%;
+  margin-bottom: 16px;
 }
