--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,5 @@
+// Media
+
 .video-embed {
   position: relative;
   width: 100%;
@@ -35,3 +37,24 @@
 	border: none;
 	padding: 0px;
 }
+
+// header with image
+.image-header {
+ 	display: flex;
+ 	align-items: center;
+ 	
+ 	img {
+ 		width: 48px;
+ 		//height: 48px;
+ 		padding: 0px;
+ 		margin: 10px;
+ 	}
+ 	
+ 	h3 {
+		display: flex;
+		align-items: center;
+		padding: 0px;
+		margin: 0px;
+ 	}
+}
+
